--- a/index.html
+++ b/index.html
@@ -93,13 +93,92 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                 	<a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserve_table">Reserve Table</a>
-
+                        data-toggle="modal" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                        data-placement="bottom" data-target="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- reserve table model code -->
+    <div id="reserveModal" class="modal fade" role="dialog"> 
+    	<div class="modal-dialog modal-lg" role="content">
+    		<div class="modal-content">
+    			<div class="modal-header">
+    				<h4 class="modal-title">Reserve a Table</h4>
+    				<button type="button" class="close" data-dismiss="modal">
+    					&times;
+    				</button>
+    			</div>
+    			<div class="modal-body">
+    				<div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <label for="no_of_guests" class="col-md-2 col-form-label"><b>Number of Guests</b></label>
+                            <div class="col-1 form-check">
+                            	<input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests_1" value="1">
+                            	<label class="form-check-label" for="no_of_guests_1">1</label>
+                            </div>
+                            <div class="col-1 form-check">
+                            	<input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests_2" value="2">
+                            	<label class="form-check-label" for="no_of_guests_2">2</label>
+                            </div>    
+                            <div class="col-1 form-check">
+                            	<input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests_3" value="3">
+                            	<label class="form-check-label" for="no_of_guests_3">3</label>
+                            </div>
+                            <div class="col-1 form-check">
+                            	<input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests_4" value="4">
+                            	<label class="form-check-label" for="no_of_guests_4">4</label>
+                            </div>
+                            <div class="col-1 form-check">
+                            	<input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests_5" value="5">
+                            	<label class="form-check-label" for="no_of_guests_5">5</label>
+                            </div>
+                            <div class="col-1 form-check">
+                            	<input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests_6" value="6">
+                            	<label class="form-check-label" for="no_of_guests_6">6</label>
+                            </div>
+		        		</div>
+
+		        		<div class="form-group row">
+		        			<label for="smoking" class="col-md-2 col-form-label"><b>Section</b></label>
+		        			<!-- <div class="col-md-10"> -->
+		        				<div class="btn-group btn-group-toggle col-md-10" data-toggle="buttons">
+		        					<label class="btn btn-success active">
+		        						<input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+		        					</label>
+		        					<label class="btn btn-danger">
+		        						<input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+		        					</label>
+		        				</div>
+		        			<!-- </div>	 -->
+		        		</div>
+
+		        		<div class="form-group row">
+		        			<label for="datetime" class="col-md-2 col-form-label"><b>Date &amp; Time</b></label>
+		        			<div class="col-md-3">
+		        				<input type="text" class="form-control" id="date" name="date" placeholder="Date">
+		        			</div>
+		        			<div class="col-md-3">
+		        				<input type="text" class="form-control" id="time" name="time" placeholder="Time">
+		        			</div>
+		        		</div>
+
+		        		<div class="form-group row">
+		        			<div class="col-md-2 offset-md-2">
+		        				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+		        			</div>
+		        			<div class="col-md-5">
+		        				<button type="submit" class="btn btn-primary">Reserve</button>
+		        			</div>
+		        		</div>
+                    </form>
+                </div>
+    			</div>
+    		</div>
+    	</div>
+    </div>
 
     <div class="container">
     	<div class="row row-content">
